# Tiralabra

./: .coverage  .gitignore  README.md  pyproject.toml
compressed/: coded_hw.txt  coded_loremipsum.txt  coded_rc.txt  coded_rc_lz.txt  coded_redundancy_zero.txt  compressed_hw.txt
data/: rc.txt
data/compressing_test_data/: kalevala.txt  karri_koira.txt  redundancy_zero.txt
data/test_data/: loremipsum.txt  rc.txt
docs/: projektin_maarittely.md  projektin_testausdokumentti.md  projektin_toteutusdokumentti.md  viikko1raportti.md  viikko2raportti.md  viikko3raportti.md  viikko4raportti.md  viikko5raportti.md  viikko6raportti.md
src/: app.py  compressing_testing_huffman.py  compressing_testing_lz78.py  main.py  performance_testing.py
src/algs/: help.py  huffman.py  lz78.py
src/tests/: huffman_test.py  lz78_test.py
