[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Kirill Saukkonen <kirillsaukkonen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.4"
coverage = "^7.6.12"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
